--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "main": "lib/parser.js",
   "scripts": {
     "start": "$(npm bin)/babel-node demo/index.js --presets es2015 stage-0",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "$(npm bin)/mocha --compilers js:babel-register"
   },
   "devDependencies": {
     "babel-cli": "^6.0.0",
+    "babel-preset-es2015": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
-    "babel-preset-es2015": "^6.5.0"
+    "mocha": "^2.5.3"
   },
   "repository": {
     "type": "git",
@@ -23,6 +24,7 @@
   },
   "homepage": "https://github.com/alexandre-garrec/data-adapter#readme",
   "dependencies": {
+    "chai": "^3.5.0",
     "invariant": "^2.2.1"
   }
 }
