--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "lib/parser.js",
   "scripts": {
     "start": "$(npm bin)/babel-node demo/index.js --presets es2015 stage-0",
+    "build": "$(npm bin)/babel src --out-dir dist --presets es2015",
     "test": "$(npm bin)/mocha --compilers js:babel-register"
   },
   "devDependencies": {
