--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-cli": "^6.0.0",
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
+    "babel-register": "^6.9.0",
     "mocha": "^2.5.3"
   },
   "repository": {
