--- a/.eslintrc
+++ b/.eslintrc
@@ -10,3 +10,14 @@
     "ecmaFeatures": {
     }
   },
+  
+  "rules": {
+    "indent": [2, 2, { "SwitchCase": 1 }],
+    "semi": [2, "never"],
+    "no-case-declarations": 0,
+    "eol-last": 2,
+    "no-cond-assign": 2
+  },
+  
+  "parser": "babel-eslint"
+}
