--- a/package.json
+++ b/package.json
@@ -6,13 +6,19 @@
   "scripts": {
     "start": "$(npm bin)/babel-node demo/index.js --presets es2015 stage-0",
     "build": "$(npm bin)/babel src --out-dir dist --presets es2015",
-    "test": "$(npm bin)/mocha --compilers js:babel-register"
+    "test": "$(npm bin)/mocha --compilers js:babel-register",
+    "lint": "$(npm bin)/eslint src --ext .js",
+     "precommit": "npm test",
+    "prepush": "npm lint"
   },
   "devDependencies": {
     "babel-cli": "^6.0.0",
+    "babel-eslint": "^6.0.4",
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.9.0",
+    "eslint": "^2.11.1",
+    "husky": "^0.11.4",
     "mocha": "^2.5.3"
   },
   "repository": {
