--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "build": "$(npm bin)/babel src --out-dir dist --presets es2015",
     "test": "$(npm bin)/mocha --compilers js:babel-register",
     "lint": "$(npm bin)/eslint src --ext .js",
-     "precommit": "npm test",
-    "prepush": "npm lint"
+    "prepush": "npm test",
+    "precommit": "npm run lint"
   },
   "devDependencies": {
     "babel-cli": "^6.0.0",
