--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "$(npm bin)/mocha --compilers js:babel-register",
     "lint": "$(npm bin)/eslint src --ext .js",
     "prepush": "npm test",
-    "precommit": "npm run lint"
+    "precommit": "npm run lint && npm run build"
   },
   "devDependencies": {
     "babel-cli": "^6.0.0",
